⭐ add translations in shortcut

--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -15,7 +15,7 @@
 	"Add a short description about what this modelfile does": "Thêm mô tả ngắn về việc tệp mô tả mô hình (modelfile) này làm gì",
 	"Add a short title for this prompt": "Thêm tiêu đề ngắn cho prompt này",
 	"Add a tag": "Thêm thẻ (tag)",
-	"Add custom prompt": "",
+	"Add custom prompt": "Thêm prompt tùy chỉnh",
 	"Add Docs": "Thêm tài liệu",
 	"Add Files": "Thêm tệp",
 	"Add message": "Thêm tin nhắn",
@@ -47,7 +47,7 @@
 	"Archived Chats": "bản ghi trò chuyện",
 	"are allowed - Activate this command by typing": "được phép - Kích hoạt lệnh này bằng cách gõ",
 	"Are you sure?": "Bạn có chắc chắn không?",
-	"Attach file": "",
+	"Attach file": "Gắn tệp",
 	"Attention to detail": "Có sự chú ý đến chi tiết của vấn đề",
 	"Audio": "Âm thanh",
 	"August": "",
@@ -230,7 +230,7 @@
 	"Import Modelfiles": "Nạp tệp mô tả",
 	"Import Prompts": "Nạp các prompt lên hệ thống",
 	"Include `--api` flag when running stable-diffusion-webui": "Bao gồm flag `--api` khi chạy stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Nhập lệnh",
 	"Interface": "Giao diện",
 	"Invalid Tag": "",
 	"January": "",
@@ -381,7 +381,7 @@
 	"Select a mode": "Chọn một chế độ",
 	"Select a model": "Chọn mô hình",
 	"Select an Ollama instance": "Chọn một thực thể Ollama",
-	"Select model": "",
+	"Select model": "Chọn mô hình",
 	"Send": "",
 	"Send a Message": "Gửi yêu cầu",
 	"Send message": "Gửi yêu cầu",
