--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "Archivierte Chats",
 	"are allowed - Activate this command by typing": "sind erlaubt - Aktiviere diesen Befehl, indem du",
 	"Are you sure?": "Bist du sicher?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Du kannst mit LLMs interagieren, und die Details und Einstellungen, die es merkt, werden hier angezeigt.",
 	"Attach file": "Datei anhängen",
 	"Attention to detail": "Auge fürs Detail",
 	"Audio": "Audio",
@@ -384,7 +384,7 @@
 	"Select a mode": "Einen Modus auswählen",
 	"Select a model": "Ein Modell auswählen",
 	"Select an Ollama instance": "Eine Ollama Instanz auswählen",
-	"Select model": "",
+	"Select model": "Modell auswählen",
 	"Send": "",
 	"Send a Message": "Eine Nachricht senden",
 	"Send message": "Nachricht senden",
