--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "Arhivirani razgovori",
 	"are allowed - Activate this command by typing": "su dopušteni - Aktivirajte ovu naredbu upisivanjem",
 	"Are you sure?": "Jeste li sigurni?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Kada razgovarite s LLM-ima, detalji i postavke koje ih zapamtite će se ovdje prikazati.",
 	"Attach file": "Priloži datoteku",
 	"Attention to detail": "Pažnja na detalje",
 	"Audio": "Audio",
