--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "Chat archiviate",
 	"are allowed - Activate this command by typing": "sono consentiti - Attiva questo comando digitando",
 	"Are you sure?": "Sei sicuro?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Quando si parla con LLM, i dettagli e le preferenze che ricorda verranno mostrati qui.",
 	"Attach file": "Allega file",
 	"Attention to detail": "Attenzione ai dettagli",
 	"Audio": "Audio",
