--- a/src/lib/i18n/locales/pa-IN/translation.json
+++ b/src/lib/i18n/locales/pa-IN/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "ਆਰਕਾਈਵ ਕੀਤੀਆਂ ਗੱਲਾਂ",
 	"are allowed - Activate this command by typing": "ਅਨੁਮਤ ਹਨ - ਇਸ ਕਮਾਂਡ ਨੂੰ ਟਾਈਪ ਕਰਕੇ ਸਰਗਰਮ ਕਰੋ",
 	"Are you sure?": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਹੋ?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "ਤੁਸੀਂ LLMs ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੇ ਤਾਂ ਇਸ ਨੂੰ ਸਮਰੱਥ ਕਰਦੇ ਤਾਂ ਇਸ ਨੂੰ ਸਮਰੱਥ ਕਰਦੇ ਤਾਂ ਇਸ ਨੂੰ ਸਮਰੱਥ ਕਰਦੇ ਤਾਂ ਇਸ ਨੂੰ ਸਮਰੱਥ ਕਰਦੇ ਤਾਂ ਇਸ ਨੂੰ ਸਮਰੱਥ ਕ",
 	"Attach file": "ਫਾਈਲ ਜੋੜੋ",
 	"Attention to detail": "ਵੇਰਵੇ 'ਤੇ ਧਿਆਨ",
 	"Audio": "ਆਡੀਓ",
