--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "Zarchiwizowane czaty",
 	"are allowed - Activate this command by typing": "są dozwolone - Aktywuj to polecenie, wpisując",
 	"Are you sure?": "Jesteś pewien?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Zgadujesz z LLM, szczegóły i preferencje, które zapamiętuje, będą wyświetlane tutaj.",
 	"Attach file": "Dołącz plik",
 	"Attention to detail": "Dbałość o szczegóły",
 	"Audio": "Dźwięk",
