--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "Добавьте краткое описание, что делает этот моделфайл",
 	"Add a short title for this prompt": "Добавьте краткий заголовок для этого ввода",
 	"Add a tag": "Добавьте тэг",
-	"Add custom prompt": "",
+	"Add custom prompt": "Добавьте пользовательский ввод",
 	"Add Docs": "Добавьте документы",
 	"Add Files": "Добавьте файлы",
 	"Add Memory": "",
@@ -49,9 +49,9 @@
 	"Archived Chats": "запис на чат",
 	"are allowed - Activate this command by typing": "разрешено - активируйте эту команду вводом",
 	"Are you sure?": "Вы уверены?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
-	"Attention to detail": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Вы можете чат с LLMs, детали и предпочтения, которые он запомнил будут показаны здесь.",
+	"Attach file": "Прикрепить файл",
+	"Attention to detail": "детализированный",
 	"Audio": "Аудио",
 	"August": "",
 	"Auto-playback response": "Автоматическое воспроизведение ответа",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "Импорт файлов модели",
 	"Import Prompts": "Импорт подсказок",
 	"Include `--api` flag when running stable-diffusion-webui": "Добавьте флаг `--api` при запуске stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Введите команды",
 	"Interface": "Интерфейс",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "Выберите режим",
 	"Select a model": "Выберите модель",
 	"Select an Ollama instance": "Выберите экземпляр Ollama",
-	"Select model": "",
+	"Select model": "Выберите модель",
 	"Send": "",
 	"Send a Message": "Отправить сообщение",
 	"Send message": "Отправить сообщение",
