--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -49,7 +49,7 @@
 	"Archived Chats": "Архівовані чати",
 	"are allowed - Activate this command by typing": "дозволено - активізуйте цю команду набором",
 	"Are you sure?": "Ви впевнені?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Як ви спілкуєтесь з LLMs, деталі та пріоритети, які вони запам'ятовують, будуть показані тут.",
 	"Attach file": "Прикріпити файл",
 	"Attention to detail": "Увага до деталей",
 	"Audio": "Аудіо",
