--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -49,8 +49,8 @@
 	"Archived Chats": "聊天记录存档",
 	"are allowed - Activate this command by typing": "允许 - 通过输入来激活这个命令",
 	"Are you sure?": "你确定吗？",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "附件",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "你与 LLMs 聊天时，它记住的细节和偏好将显示在这里。",
+	"Attach file": "添加文件",
 	"Attention to detail": "注重细节",
 	"Audio": "音频",
 	"August": "八月",
