--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "Добавяне на кратко описание за това какво прави този модфайл",
 	"Add a short title for this prompt": "Добавяне на кратко заглавие за този промпт",
 	"Add a tag": "Добавяне на таг",
-	"Add custom prompt": "",
+	"Add custom prompt": "Добавяне на собствен промпт",
 	"Add Docs": "Добавяне на Документи",
 	"Add Files": "Добавяне на Файлове",
 	"Add Memory": "",
@@ -49,8 +49,8 @@
 	"Archived Chats": "",
 	"are allowed - Activate this command by typing": "са разрешени - Активирайте тази команда чрез въвеждане",
 	"Are you sure?": "Сигурни ли сте?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "При чат с LLMs, детайлите и предпочитанията, които се запазват, ще бъдат показани тук.",
+	"Attach file": "Прикачване на файл",
 	"Attention to detail": "",
 	"Audio": "Аудио",
 	"August": "",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "Импортване на модфайлове",
 	"Import Prompts": "Импортване на промптове",
 	"Include `--api` flag when running stable-diffusion-webui": "Включете флага `--api`, когато стартирате stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Въведете команди",
 	"Interface": "Интерфейс",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "Изберете режим",
 	"Select a model": "Изберете модел",
 	"Select an Ollama instance": "Изберете Ollama инстанция",
-	"Select model": "",
+	"Select model": "Изберете модел",
 	"Send": "",
 	"Send a Message": "Изпращане на Съобщение",
 	"Send message": "Изпращане на съобщение",
