--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -16,7 +16,6 @@
 	"Add a short description about what this modelfile does": "Add short description about what this modelfile does",
 	"Add a short title for this prompt": "Add short title for this prompt",
 	"Add a tag": "Add such tag",
-	"Add custom prompt": "",
 	"Add Docs": "Add Docs",
 	"Add Files": "Add Files",
 	"Add Memory": "",
@@ -50,7 +49,7 @@
 	"are allowed - Activate this command by typing": "are allowed. Activate typing",
 	"Are you sure?": "Such certainty?",
 	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
+	"Attach file": "Attach file",
 	"Attention to detail": "",
 	"Audio": "Audio",
 	"August": "",
@@ -233,7 +232,7 @@
 	"Import Modelfiles": "Import Modelfiles",
 	"Import Prompts": "Import Promptos",
 	"Include `--api` flag when running stable-diffusion-webui": "Include `--api` flag when running stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Input commands",
 	"Interface": "Interface",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +383,7 @@
 	"Select a mode": "Select a mode very choose",
 	"Select a model": "Select a model much choice",
 	"Select an Ollama instance": "Select an Ollama instance very choose",
-	"Select model": "",
+	"Select model": "Select model much choice",
 	"Send": "",
 	"Send a Message": "Send a Message much message",
 	"Send message": "Send message very send",
