--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "Agregue una descripción corta de lo que este modelfile hace",
 	"Add a short title for this prompt": "Agregue un título corto para este Prompt",
 	"Add a tag": "Agregar una etiqueta",
-	"Add custom prompt": "",
+	"Add custom prompt": "Agregar un prompt personalizado",
 	"Add Docs": "Agregar Documentos",
 	"Add Files": "Agregar Archivos",
 	"Add Memory": "",
@@ -49,9 +49,9 @@
 	"Archived Chats": "Chats archivados",
 	"are allowed - Activate this command by typing": "están permitidos - Active este comando escribiendo",
 	"Are you sure?": "¿Está seguro?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
-	"Attention to detail": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Al chatear con LLMs, los detalles y preferencias que recuerda se mostrarán aquí.",
+	"Attach file": "Adjuntar archivo",
+	"Attention to detail": "Detalle preciso",
 	"Audio": "Audio",
 	"August": "",
 	"Auto-playback response": "Respuesta de reproducción automática",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "Importar Modelfiles",
 	"Import Prompts": "Importar Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Incluir el indicador `--api` al ejecutar stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Ingresar comandos",
 	"Interface": "Interfaz",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "Selecciona un modo",
 	"Select a model": "Selecciona un modelo",
 	"Select an Ollama instance": "Seleccione una instancia de Ollama",
-	"Select model": "",
+	"Select model": "Selecciona un modelo",
 	"Send": "",
 	"Send a Message": "Enviar un Mensaje",
 	"Send message": "Enviar Mensaje",
