--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "توضیح کوتاهی در مورد کاری که این فایل\u200cمدل انجام می دهد اضافه کنید",
 	"Add a short title for this prompt": "یک عنوان کوتاه برای این درخواست اضافه کنید",
 	"Add a tag": "اضافه کردن یک تگ",
-	"Add custom prompt": "",
+	"Add custom prompt": "اضافه کردن یک درخواست سفارشی",
 	"Add Docs": "اضافه کردن اسناد",
 	"Add Files": "اضافه کردن فایل\u200cها",
 	"Add Memory": "",
@@ -49,9 +49,9 @@
 	"Archived Chats": "آرشیو تاریخچه چت",
 	"are allowed - Activate this command by typing": "مجاز هستند - این دستور را با تایپ کردن این فعال کنید:",
 	"Are you sure?": "آیا مطمئن هستید؟",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
-	"Attention to detail": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "با گفتگو با LLMs، اطلاعات و علائمی که آنها به یاد می گیرند، در اینجا نشان داده می شود.",
+	"Attach file": "پیوست فایل",
+	"Attention to detail": "دقیق",
 	"Audio": "صدا",
 	"August": "",
 	"Auto-playback response": "پخش خودکار پاسخ ",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "ایمپورت فایل\u200cهای مدل",
 	"Import Prompts": "ایمپورت پرامپت\u200cها",
 	"Include `--api` flag when running stable-diffusion-webui": "فلگ `--api` را هنکام اجرای stable-diffusion-webui استفاده کنید.",
-	"Input commands": "",
+	"Input commands": "ورودی دستورات",
 	"Interface": "رابط",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "یک حالت انتخاب کنید",
 	"Select a model": "انتخاب یک مدل",
 	"Select an Ollama instance": "انتخاب یک نمونه از اولاما",
-	"Select model": "",
+	"Select model": "انتخاب یک مدل",
 	"Send": "",
 	"Send a Message": "ارسال یک پیام",
 	"Send message": "ارسال پیام",
