--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -49,7 +49,12 @@
 	"Archived Chats": "Arkistoidut keskustelut",
 	"are allowed - Activate this command by typing": "ovat sallittuja - Aktivoi tämä komento kirjoittamalla",
 	"Are you sure?": "Oletko varma?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Keskusteluja koskevat tiedot ja asetukset, jotka LLM muistaa, näkyvät täällä.",
+	"Avatar": "Avatar",
+	"Avatar URL": "Avatar-URL",
+	"Avatar URL is required.": "Avatar-URL vaaditaan.",
+	"Avatar is required.": "Avatar vaaditaan.",
+	"Avatar is too large.": "Avatar on liian suuri",
 	"Attach file": "Liitä tiedosto",
 	"Attention to detail": "Huomio yksityiskohtiin",
 	"Audio": "Ääni",
