--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "Ajouter une courte description de ce que fait ce fichier de modèle",
 	"Add a short title for this prompt": "Ajouter un court titre pour ce prompt",
 	"Add a tag": "Ajouter un tag",
-	"Add custom prompt": "",
+	"Add custom prompt": "Ajouter un prompt personnalisé",
 	"Add Docs": "Ajouter des documents",
 	"Add Files": "Ajouter des fichiers",
 	"Add Memory": "",
@@ -49,9 +49,9 @@
 	"Archived Chats": "enregistrement du chat",
 	"are allowed - Activate this command by typing": "sont autorisés - Activez cette commande en tapant",
 	"Are you sure?": "Êtes-vous sûr ?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
-	"Attention to detail": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Vous pouvez voir les détails et les préférences qu'il mémorise lorsque vous discutez avec les LLM.",
+	"Attach file": "Joindre un fichier",
+	"Attention to detail": "Attention aux détails",
 	"Audio": "Audio",
 	"August": "",
 	"Auto-playback response": "Réponse en lecture automatique",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "Importer les fichiers de modèle",
 	"Import Prompts": "Importer les prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclure le drapeau `--api` lors de l'exécution de stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Entrez les commandes d'entrée",
 	"Interface": "Interface",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "Sélectionnez un mode",
 	"Select a model": "Sélectionner un modèle",
 	"Select an Ollama instance": "Sélectionner une instance Ollama",
-	"Select model": "",
+	"Select model": "Sélectionner un modèle",
 	"Send": "",
 	"Send a Message": "Envoyer un message",
 	"Send message": "Envoyer un message",
