--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "Voeg een korte beschrijving toe over wat dit modelfile doet",
 	"Add a short title for this prompt": "Voeg een korte titel toe voor deze prompt",
 	"Add a tag": "Voeg een tag toe",
-	"Add custom prompt": "",
+	"Add custom prompt": "Voeg een aangepaste prompt toe",
 	"Add Docs": "Voeg Docs toe",
 	"Add Files": "Voege Bestanden toe",
 	"Add Memory": "",
@@ -49,8 +49,8 @@
 	"Archived Chats": "chatrecord",
 	"are allowed - Activate this command by typing": "zijn toegestaan - Activeer deze commando door te typen",
 	"Are you sure?": "Zeker weten?",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "Als je met LLMs chat, zullen de details en voorkeuren die ze onthouden worden hier getoond.",
+	"Attach file": "Voeg een bestand toe",
 	"Attention to detail": "",
 	"Audio": "Audio",
 	"August": "",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "Importeer Modelfiles",
 	"Import Prompts": "Importeer Prompts",
 	"Include `--api` flag when running stable-diffusion-webui": "Voeg `--api` vlag toe bij het uitvoeren van stable-diffusion-webui",
-	"Input commands": "",
+	"Input commands": "Voer commando's in",
 	"Interface": "Interface",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "Selecteer een modus",
 	"Select a model": "Selecteer een model",
 	"Select an Ollama instance": "Selecteer een Ollama instantie",
-	"Select model": "",
+	"Select model": "Selecteer een model",
 	"Send": "",
 	"Send a Message": "Stuur een Bericht",
 	"Send message": "Stuur bericht",
