--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -16,7 +16,7 @@
 	"Add a short description about what this modelfile does": "為這個 Modelfile 添加一段簡短的描述",
 	"Add a short title for this prompt": "為這個提示詞添加一個簡短的標題",
 	"Add a tag": "新增標籤",
-	"Add custom prompt": "",
+	"Add custom prompt": "新增自定義提示詞",
 	"Add Docs": "新增文件",
 	"Add Files": "新增檔案",
 	"Add Memory": "",
@@ -49,8 +49,8 @@
 	"Archived Chats": "聊天記錄存檔",
 	"are allowed - Activate this command by typing": "是允許的 - 透過輸入",
 	"Are you sure?": "你確定嗎？",
-	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "",
-	"Attach file": "",
+	"As you chat with LLMs, the details and preferences it remembers will be shown here.": "當你與 LLMs 聊天時，它會記住的詳細內容和偏好設定將會顯示在這裡。",
+	"Attach file": "附加檔案",
 	"Attention to detail": "",
 	"Audio": "音訊",
 	"August": "",
@@ -233,7 +233,7 @@
 	"Import Modelfiles": "匯入 Modelfiles",
 	"Import Prompts": "匯入提示詞",
 	"Include `--api` flag when running stable-diffusion-webui": "在運行 stable-diffusion-webui 時加上 `--api` 標誌",
-	"Input commands": "",
+	"Input commands": "輸入命令",
 	"Interface": "介面",
 	"Invalid Tag": "",
 	"January": "",
@@ -384,7 +384,7 @@
 	"Select a mode": "選擇模式",
 	"Select a model": "選擇一個模型",
 	"Select an Ollama instance": "選擇 Ollama 實例",
-	"Select model": "",
+	"Select model": "選擇模型",
 	"Send": "",
 	"Send a Message": "傳送訊息",
 	"Send message": "傳送訊息",
