--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -9,8 +9,8 @@
 	"a user": "en användare",
 	"About": "Om",
 	"Account": "Konto",
-	"Accurate information": "",
-	"Add": "",
+	"Accurate information": "Korrekt information",
+	"Add": "Lägg till",
 	"Add a model": "Lägg till en modell",
 	"Add a model tag name": "Lägg till ett modellnamn",
 	"Add a short description about what this modelfile does": "Lägg till en kort beskrivning av vad den här modelfilen gör",
@@ -21,9 +21,9 @@
 	"Add Files": "Lägg till filer",
 	"Add Memory": "",
 	"Add message": "Lägg till meddelande",
-	"Add Model": "",
-	"Add Tags": "",
-	"Add User": "",
+	"Add Model": "Lägg till modell",
+	"Add Tags": "Lägg till tagg",
+	"Add User": "Lägg till användare",
 	"Adjusting these settings will apply changes universally to all users.": "Justering av dessa inställningar kommer att tillämpa ändringar universellt för alla användare.",
 	"admin": "administratör",
 	"Admin Panel": "Administrationspanel",
@@ -38,13 +38,13 @@
 	"Already have an account?": "Har du redan ett konto?",
 	"an assistant": "en assistent",
 	"and": "och",
-	"and create a new shared link.": "",
+	"and create a new shared link.": "och skapa en ny delad länk",
 	"API Base URL": "API-bas-URL",
 	"API Key": "API-nyckel",
-	"API Key created.": "",
-	"API keys": "",
+	"API Key created.": "API nyckel skapad",
+	"API keys": "API nycklar",
 	"API RPM": "API RPM",
-	"April": "",
+	"April": "April",
 	"Archive": "",
 	"Archived Chats": "",
 	"are allowed - Activate this command by typing": "är tillåtna - Aktivera detta kommando genom att skriva",
@@ -52,24 +52,24 @@
 	"Attach file": "Bifoga fil",
 	"Attention to detail": "Detaljerad uppmärksamhet",
 	"Audio": "Ljud",
-	"August": "",
+	"August": "Augusti",
 	"Auto-playback response": "Automatisk uppspelning",
 	"Auto-send input after 3 sec.": "Skicka automatiskt indata efter 3 sek.",
 	"AUTOMATIC1111 Base URL": "AUTOMATIC1111 bas-URL",
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 bas-URL krävs.",
 	"available!": "tillgänglig!",
 	"Back": "Tillbaka",
-	"Bad Response": "",
-	"before": "",
+	"Bad Response": "Dåligt svar",
+	"before": "före",
 	"Being lazy": "",
 	"Builder Mode": "Byggarläge",
-	"Bypass SSL verification for Websites": "",
+	"Bypass SSL verification for Websites": "Kringgå SSL verifikation för webbsidor",
 	"Cancel": "Avbryt",
 	"Categories": "Kategorier",
 	"Change Password": "Ändra lösenord",
 	"Chat": "Chatt",
-	"Chat Bubble UI": "",
-	"Chat direction": "",
+	"Chat Bubble UI": "Chatt bubbla UI",
+	"Chat direction": "Chatt riktning",
 	"Chat History": "Chatthistorik",
 	"Chat History is off for this browser.": "Chatthistoriken är avstängd för denna webbläsare.",
 	"Chats": "Chattar",
@@ -82,18 +82,18 @@
 	"Chunk Size": "Chunk-storlek",
 	"Citation": "Citat",
 	"Click here for help.": "Klicka här för hjälp.",
-	"Click here to": "",
+	"Click here to": "Klicka här för att",
 	"Click here to check other modelfiles.": "Klicka här för att kontrollera andra modelfiler.",
 	"Click here to select": "Klicka här för att välja",
-	"Click here to select a csv file.": "",
+	"Click here to select a csv file.": "Klicka här för att välja en csv fil",
 	"Click here to select documents.": "Klicka här för att välja dokument.",
 	"click here.": "klicka här.",
 	"Click on the user role button to change a user's role.": "Klicka på knappen för användarroll för att ändra en användares roll.",
 	"Close": "Stäng",
 	"Collection": "Samling",
 	"ComfyUI": "",
-	"ComfyUI Base URL": "",
-	"ComfyUI Base URL is required.": "",
+	"ComfyUI Base URL": "ComfyUI bas URL",
+	"ComfyUI Base URL is required.": "ComfyUI bas URL krävs",
 	"Command": "Kommando",
 	"Confirm Password": "Bekräfta lösenord",
 	"Connections": "Anslutningar",
@@ -101,19 +101,19 @@
 	"Context Length": "Kontextlängd",
 	"Continue Response": "",
 	"Conversation Mode": "Samtalsläge",
-	"Copied shared chat URL to clipboard!": "",
-	"Copy": "",
+	"Copied shared chat URL to clipboard!": "Kopiering av delad chat URL till urklipp",
+	"Copy": "Kopiera",
 	"Copy last code block": "Kopiera sista kodblock",
 	"Copy last response": "Kopiera sista svar",
-	"Copy Link": "",
+	"Copy Link": "Kopiera länk",
 	"Copying to clipboard was successful!": "Kopiering till urklipp lyckades!",
 	"Create a concise, 3-5 word phrase as a header for the following query, strictly adhering to the 3-5 word limit and avoiding the use of the word 'title':": "Skapa en kort, 3-5 ords fras som rubrik för följande fråga, strikt följa 3-5 ordsgränsen och undvika användning av ordet 'titel':",
 	"Create a modelfile": "Skapa en modelfil",
 	"Create Account": "Skapa konto",
-	"Create new key": "",
-	"Create new secret key": "",
+	"Create new key": "Skapa ny nyckel",
+	"Create new secret key": "Skapa ny hemlig nyckel",
 	"Created at": "Skapad",
-	"Created At": "",
+	"Created At": "Skapad",
 	"Current Model": "Aktuell modell",
 	"Current Password": "Nuvarande lösenord",
 	"Custom": "Anpassad",
@@ -121,7 +121,7 @@
 	"Dark": "Mörk",
 	"Dashboard": "",
 	"Database": "Databas",
-	"December": "",
+	"December": "December",
 	"Default": "Standard",
 	"Default (Automatic1111)": "Standard (Automatic1111)",
 	"Default (SentenceTransformers)": "",
@@ -130,17 +130,17 @@
 	"Default Prompt Suggestions": "Standardpromptförslag",
 	"Default User Role": "Standardanvändarroll",
 	"delete": "radera",
-	"Delete": "",
+	"Delete": "radera",
 	"Delete a model": "Ta bort en modell",
 	"Delete chat": "Radera chatt",
-	"Delete Chat": "",
+	"Delete Chat": "Radera chatt",
 	"Delete Chats": "Radera chattar",
-	"delete this link": "",
-	"Delete User": "",
+	"delete this link": "radera länk",
+	"Delete User": "Radera användare",
 	"Deleted {{deleteModelTag}}": "Raderad {{deleteModelTag}}",
-	"Deleted {{tagName}}": "",
+	"Deleted {{tagName}}": "Radera {{tagName}}",
 	"Description": "Beskrivning",
-	"Didn't fully follow instructions": "",
+	"Didn't fully follow instructions": "Följde inte instruktioner",
 	"Disabled": "Inaktiverad",
 	"Discover a modelfile": "Upptäck en modelfil",
 	"Discover a prompt": "Upptäck en prompt",
@@ -153,29 +153,29 @@
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "gör inga externa anslutningar, och dina data förblir säkra på din lokalt värdade server.",
 	"Don't Allow": "Tillåt inte",
 	"Don't have an account?": "Har du inte ett konto?",
-	"Don't like the style": "",
-	"Download": "",
-	"Download canceled": "",
+	"Don't like the style": "Gillar inte den här stilen",
+	"Download": "Nerladdning",
+	"Download canceled": "Nerladdning avbruten",
 	"Download Database": "Ladda ner databas",
 	"Drop any files here to add to the conversation": "Släpp filer här för att lägga till i konversationen",
 	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "t.ex. '30s', '10m'. Giltiga tidsenheter är 's', 'm', 'h'.",
-	"Edit": "",
+	"Edit": "Ändra",
 	"Edit Doc": "Redigera dokument",
 	"Edit User": "Redigera användare",
 	"Email": "E-post",
-	"Embedding Model": "",
-	"Embedding Model Engine": "",
+	"Embedding Model": "Inbäddad modell",
+	"Embedding Model Engine": "Motor för inbäddad modell",
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "Aktivera chatthistorik",
 	"Enable New Sign Ups": "Aktivera nya registreringar",
 	"Enabled": "Aktiverad",
-	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
+	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Var säker att din CSV fil inkluderar 4 kolumner i följande ordning: Namn, Email, Lösenord, Roll",
 	"Enter {{role}} message here": "Skriv {{role}} meddelande här",
-	"Enter a detail about yourself for your LLMs to recall": "",
+	"Enter a detail about yourself for your LLMs to recall": "Detaljer om dig själv som din LLM kan minnas",
 	"Enter Chunk Overlap": "Ange Chunk-överlappning",
 	"Enter Chunk Size": "Ange Chunk-storlek",
 	"Enter Image Size (e.g. 512x512)": "Ange bildstorlek (t.ex. 512x512)",
-	"Enter language codes": "",
+	"Enter language codes": "Skriv in din landskod",
 	"Enter LiteLLM API Base URL (litellm_params.api_base)": "Ange LiteLLM API-bas-URL (litellm_params.api_base)",
 	"Enter LiteLLM API Key (litellm_params.api_key)": "Ange LiteLLM API-nyckel (litellm_params.api_key)",
 	"Enter LiteLLM API RPM (litellm_params.rpm)": "Ange LiteLLM API RPM (litellm_params.rpm)",
@@ -183,7 +183,7 @@
 	"Enter Max Tokens (litellm_params.max_tokens)": "Ange max antal tokens (litellm_params.max_tokens)",
 	"Enter model tag (e.g. {{modelTag}})": "Ange modelltagg (t.ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Ange antal steg (t.ex. 50)",
-	"Enter Score": "",
+	"Enter Score": "Skriv in poäng",
 	"Enter stop sequence": "Ange stoppsekvens",
 	"Enter Top K": "Ange Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Ange URL (t.ex. http://127.0.0.1:7860/)",
@@ -191,38 +191,38 @@
 	"Enter Your Email": "Ange din e-post",
 	"Enter Your Full Name": "Ange ditt fullständiga namn",
 	"Enter Your Password": "Ange ditt lösenord",
-	"Enter Your Role": "",
+	"Enter Your Role": "Ange din roll",
 	"Experimental": "Experimentell",
 	"Export All Chats (All Users)": "Exportera alla chattar (alla användare)",
 	"Export Chats": "Exportera chattar",
 	"Export Documents Mapping": "Exportera dokumentmappning",
 	"Export Modelfiles": "Exportera modelfiler",
 	"Export Prompts": "Exportera prompts",
-	"Failed to create API Key.": "",
+	"Failed to create API Key.": "Misslyckades att skapa API nyckel",
 	"Failed to read clipboard contents": "Misslyckades med att läsa urklippsinnehåll",
-	"February": "",
+	"February": "Februari",
 	"Feel free to add specific details": "",
 	"File Mode": "Fil-läge",
 	"File not found.": "Fil hittades inte.",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Fingeravtrycksmanipulering upptäckt: Kan inte använda initialer som avatar. Återställning till standardprofilbild.",
 	"Fluidly stream large external response chunks": "Flytande ström stora externa svarsblock",
 	"Focus chat input": "Fokusera chattindata",
-	"Followed instructions perfectly": "",
+	"Followed instructions perfectly": "Följde instruktionerna perfekt",
 	"Format your variables using square brackets like this:": "Formatera dina variabler med hakparenteser så här:",
 	"From (Base Model)": "Från (basmodell)",
 	"Full Screen Mode": "Helskärmsläge",
 	"General": "Allmän",
 	"General Settings": "Allmänna inställningar",
-	"Generation Info": "",
-	"Good Response": "",
+	"Generation Info": "Generell information",
+	"Good Response": "Bra svar",
 	"h:mm a": "",
-	"has no conversations.": "",
+	"has no conversations.": "Har ingen konversation",
 	"Hello, {{name}}": "Hej, {{name}}",
-	"Help": "",
+	"Help": "Hjälp",
 	"Hide": "Dölj",
 	"Hide Additional Params": "Dölj ytterligare parametrar",
 	"How can I help you today?": "Hur kan jag hjälpa dig idag?",
-	"Hybrid Search": "",
+	"Hybrid Search": "Hybridsökning",
 	"Image Generation (Experimental)": "Bildgenerering (experimentell)",
 	"Image Generation Engine": "Bildgenereringsmotor",
 	"Image Settings": "Bildinställningar",
@@ -234,18 +234,18 @@
 	"Include `--api` flag when running stable-diffusion-webui": "Inkludera `--api`-flagga när du kör stabil-diffusion-webui",
 	"Input commands": "Indatakommandon",
 	"Interface": "Gränssnitt",
-	"Invalid Tag": "",
-	"January": "",
+	"Invalid Tag": "Ogiltig tagg",
+	"January": "Januari",
 	"join our Discord for help.": "gå med i vår Discord för hjälp.",
 	"JSON": "JSON",
-	"July": "",
-	"June": "",
+	"July": "Juli",
+	"June": "Juni",
 	"JWT Expiration": "JWT-utgång",
 	"JWT Token": "JWT-token",
 	"Keep Alive": "Håll vid liv",
 	"Keyboard shortcuts": "Tangentbordsgenvägar",
 	"Language": "Språk",
-	"Last Active": "",
+	"Last Active": "Senast aktiv",
 	"Light": "Ljus",
 	"Listening...": "Lyssnar...",
 	"LLMs can make mistakes. Verify important information.": "LLM:er kan göra misstag. Verifiera viktig information.",
@@ -255,18 +255,18 @@
 	"Manage LiteLLM Models": "Hantera LiteLLM-modeller",
 	"Manage Models": "Hantera modeller",
 	"Manage Ollama Models": "Hantera Ollama-modeller",
-	"March": "",
+	"March": "Mars",
 	"Max Tokens": "Max antal tokens",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Högst 3 modeller kan laddas ner samtidigt. Vänligen försök igen senare.",
-	"May": "",
+	"May": "Maj",
 	"Memories accessible by LLMs will be shown here.": "",
-	"Memory": "",
+	"Memory": "Minne",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
-	"Minimum Score": "",
+	"Minimum Score": "Lägsta poäng",
 	"Mirostat": "Mirostat",
 	"Mirostat Eta": "Mirostat Eta",
 	"Mirostat Tau": "Mirostat Tau",
-	"MMMM DD, YYYY": "MMMM DD, ÅÅÅÅ",
+	"MMMM DD, YYYY": "MMMM DD, YYYY",
 	"MMMM DD, YYYY HH:mm": "",
 	"Model '{{modelName}}' has been successfully downloaded.": "Modellen '{{modelName}}' har laddats ner framgångsrikt.",
 	"Model '{{modelTag}}' is already in queue for downloading.": "Modellen '{{modelTag}}' är redan i kö för nedladdning.",
@@ -274,7 +274,7 @@
 	"Model {{modelName}} already exists.": "Modellen {{modelName}} finns redan.",
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "Modellens filsystemväg upptäckt. Modellens kortnamn krävs för uppdatering, kan inte fortsätta.",
 	"Model Name": "Modellnamn",
-	"Model not selected": "Modell inte vald",
+	"Model not selected": "Ingen modell vald",
 	"Model Tag Name": "Modelltaggnamn",
 	"Model Whitelisting": "Modellens vitlista",
 	"Model(s) Whitelisted": "Modell(er) vitlistade",
@@ -283,24 +283,24 @@
 	"Modelfile Content": "Modelfilens innehåll",
 	"Modelfiles": "Modelfiler",
 	"Models": "Modeller",
-	"More": "",
+	"More": "Mer",
 	"Name": "Namn",
 	"Name Tag": "Namntag",
 	"Name your modelfile": "Namnge din modelfil",
 	"New Chat": "Ny chatt",
 	"New Password": "Nytt lösenord",
-	"No results found": "",
+	"No results found": "Hittade inget resultat",
 	"No source available": "Ingen tilgjengelig kilde",
-	"Not factually correct": "",
+	"Not factually correct": "Inte faktakorrekt",
 	"Not sure what to add?": "Inte säker på vad du ska lägga till?",
 	"Not sure what to write? Switch to": "Inte säker på vad du ska skriva? Växla till",
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "",
 	"Notifications": "Notifikationer",
-	"November": "",
-	"October": "",
+	"November": "November",
+	"October": "Oktober",
 	"Off": "Av",
 	"Okay, Let's Go!": "Okej, nu kör vi!",
-	"OLED Dark": "",
+	"OLED Dark": "OLED Mörk",
 	"Ollama": "",
 	"Ollama Base URL": "Ollama bas-URL",
 	"Ollama Version": "Ollama-version",
@@ -320,21 +320,21 @@
 	"OpenAI API Key is required.": "OpenAI API-nyckel krävs.",
 	"OpenAI URL/Key required.": "",
 	"or": "eller",
-	"Other": "",
-	"Overview": "",
+	"Other": "Annan",
+	"Overview": "Översikt",
 	"Parameters": "Parametrar",
 	"Password": "Lösenord",
-	"PDF document (.pdf)": "",
+	"PDF document (.pdf)": "PDF dokument (.pdf)",
 	"PDF Extract Images (OCR)": "PDF Extrahera bilder (OCR)",
 	"pending": "väntande",
 	"Permission denied when accessing microphone: {{error}}": "Tillstånd nekades vid åtkomst till mikrofon: {{error}}",
-	"Personalization": "",
-	"Plain text (.txt)": "",
+	"Personalization": "Personifiera",
+	"Plain text (.txt)": "Klartext (.txt)",
 	"Playground": "Lekplats",
-	"Positive attitude": "",
-	"Previous 30 days": "",
-	"Previous 7 days": "",
-	"Profile Image": "",
+	"Positive attitude": "Positiv attityd",
+	"Previous 30 days": "Föregående 30 dagar",
+	"Previous 7 days": "Föregående 7 dagar",
+	"Profile Image": "Profilbild",
 	"Prompt": "",
 	"Prompt (e.g. Tell me a fun fact about the Roman Empire)": "",
 	"Prompt Content": "Promptinnehåll",
@@ -346,15 +346,15 @@
 	"Query Params": "Frågeparametrar",
 	"RAG Template": "RAG-mall",
 	"Raw Format": "Råformat",
-	"Read Aloud": "",
+	"Read Aloud": "Läs upp",
 	"Record voice": "Spela in röst",
 	"Redirecting you to OpenWebUI Community": "Omdirigerar dig till OpenWebUI Community",
 	"Refused when it shouldn't have": "",
-	"Regenerate": "",
+	"Regenerate": "Regenerera",
 	"Release Notes": "Versionsinformation",
-	"Remove": "",
-	"Remove Model": "",
-	"Rename": "",
+	"Remove": "Ta bort",
+	"Remove Model": "Radera modell",
+	"Rename": "Döp om",
 	"Repeat Last N": "Upprepa senaste N",
 	"Repeat Penalty": "Upprepa straff",
 	"Request Mode": "Begär läge",
@@ -375,7 +375,7 @@
 	"Scan complete!": "Skanning klar!",
 	"Scan for documents from {{path}}": "Skanna efter dokument från {{path}}",
 	"Search": "Sök",
-	"Search a model": "",
+	"Search a model": "Sök efter modell",
 	"Search Documents": "Sök dokument",
 	"Search Prompts": "Sök promptar",
 	"See readme.md for instructions": "Se readme.md för instruktioner",
@@ -385,7 +385,7 @@
 	"Select a model": "Välj en modell",
 	"Select an Ollama instance": "Välj en Ollama-instans",
 	"Select model": "Välj en modell",
-	"Send": "",
+	"Send": "Skicka",
 	"Send a Message": "Skicka ett meddelande",
 	"Send message": "Skicka meddelande",
 	"September": "",
@@ -401,8 +401,8 @@
 	"Set Voice": "Ange röst",
 	"Settings": "Inställningar",
 	"Settings saved successfully!": "Inställningar sparades framgångsrikt!",
-	"Share": "",
-	"Share Chat": "",
+	"Share": "Dela",
+	"Share Chat": "Dela Chatt",
 	"Share to OpenWebUI Community": "Dela till OpenWebUI Community",
 	"short-summary": "kort sammanfattning",
 	"Show": "Visa",
@@ -413,7 +413,7 @@
 	"Sign in": "Logga in",
 	"Sign Out": "Logga ut",
 	"Sign up": "Registrera dig",
-	"Signing in": "",
+	"Signing in": "Logga in",
 	"Source": "Källa",
 	"Speech recognition error: {{error}}": "Fel vid taligenkänning: {{error}}",
 	"Speech-to-Text Engine": "Tal-till-text-motor",
@@ -421,10 +421,10 @@
 	"Stop Sequence": "Stoppsekvens",
 	"STT Settings": "STT-inställningar",
 	"Submit": "Skicka in",
-	"Subtitle (e.g. about the Roman Empire)": "",
+	"Subtitle (e.g. about the Roman Empire)": "Undertext (tex. om det Romerska Riket)",
 	"Success": "Framgång",
 	"Successfully updated.": "Uppdaterades framgångsrikt.",
-	"Suggested": "",
+	"Suggested": "Föreslå",
 	"Sync All": "Synkronisera allt",
 	"System": "System",
 	"System Prompt": "Systemprompt",
@@ -492,8 +492,8 @@
 	"Workspace": "",
 	"Write a prompt suggestion (e.g. Who are you?)": "Skriv ett förslag (t.ex. Vem är du?)",
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv en sammanfattning på 50 ord som sammanfattar [ämne eller nyckelord].",
-	"Yesterday": "",
-	"You": "",
+	"Yesterday": "Igår",
+	"You": "Du",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
 	"You're a helpful assistant.": "Du är en hjälpsam assistent.",
